Resolved alignment issue

--- a/app/design/adminhtml/Magento/backend/web/css/styles-old.less
+++ b/app/design/adminhtml/Magento/backend/web/css/styles-old.less
@@ -989,7 +989,6 @@
             padding-top: 0;
             padding-right: 30px;
             width: 20%;
-            margin-left: 30px;
         }
     }
 
